# soulapi

./: Dockerfile  Makefile  Pipfile  README.md  app.db  dev-requirements.txt  docker-compose.yml  manage.py  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 482635edc200_change_table_date_string.py  5488bdeceba6_user_table_add_datetime.py  98227d5c2e56_create_word_table.py  a93a3e5cd97b_first_generate_table.py
app/: __init__.py  config.py  crud.py  database.py  depends.py  main.py  models.py  routers.py  schemas.py  utils.py
app/crud/: base.py  psychology.py  user.py  word.py
app/email-templates/: reset_password.html  test_email.html  verify_user.html
app/models/: psychology.py  user.py  word.py  wordpi.py
app/routers/api/: __init__.py
app/routers/api/v1/: __init__.py  auth.py  psychology.py  user.py  utils.py  word.py
app/schemas/: base.py  psychology.py  token.py  user.py  word.py
tests/: conftest.py  test_router.py  utils.py
