[tool.poetry]
name = "soulapi"
version = "1.0.0"
description = ""
authors = ["shiniao <zhuzhezhe95@gmail.com>"]
license = "Apache"

[tool.poetry.dependencies]
python = "^3.7"
fastapi = "^0.63.0"
pydantic = "^1.8.1"
loguru = "^0.5.3"
SQLAlchemy = "^1.3.23"
uvicorn = "^0.13.4"
py-bcrypt = "^0.4"
emails = "^0.6"
alembic = "^1.5.5"
email-validator = "^1.1.2"
python-dotenv = "^0.15.0"
python-multipart = "^0.0.5"
redis = "^3.5.3"
python-jose = "^3.2.0"
typer = "^0.3.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
Faker = "^6.5.0"
pytest-dotenv = "^0.5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
    "integration",
]
env_files = [".env", "test.env", "deploy.env"]
